--- a/BouncyTanks255.uproject
+++ b/BouncyTanks255.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "BouncyTanks255",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
