Updated default level

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=487EEC0140652DE0790CC3AD357814A2
+CopyrightNotice=SIT255 Group Project Assignment
+
