--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -118,3 +118,8 @@ r.SupportReversedIndexBuffers=True
 r.SupportMaterialLayers=False
 r.LightPropagationVolume=False
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Main.Main
+GameDefaultMap=/Game/Main.Main
+ServerDefaultMap=/Game/Main.Main
+
