bullets firing again :)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,8 @@ AppliedDefaultGraphicsPerformance=Scalable
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/BouncyTanks255")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/BouncyTanks255")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="BouncyTanks255GameModeBase")
+bUseFixedFrameRate=True
+FixedFrameRate=60.000000
 
 [/Script/Engine.RendererSettings]
 r.Mobile.DisableVertexFog=True
