Added behavior tree functions for patrol
AI currently doesn't follow/chase/fight player but will still currently shoot them if they move in front

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,6 +12,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="BouncyTanks255GameModeBase")
 bUseFixedFrameRate=True
 FixedFrameRate=60.000000
+GameSingletonClassName=/Script/BouncyTanks255.Globals
 
 [/Script/Engine.RendererSettings]
 r.Mobile.DisableVertexFog=True
